fix grid overflow issue

--- a/src/assets/styles/cmps/AppFooter.css
+++ b/src/assets/styles/cmps/AppFooter.css
@@ -1,5 +1,6 @@
 .app-footer {
   display: flex;
+  z-index: 1000;
   bottom: 0px;
   width: 100vw;
   align-items: center;
